# throwable-firefox

./: CLAUDE.md  README.md  pyproject.toml  test-marionette.py
app/: pyproject.toml  test-marionette.py
app/src/radium226/throwable_firefox/: __init__.py
app/src/radium226/throwable_firefox/cli/: __main__.py
app/src/radium226/throwable_firefox/core/: __init__.py  _shell.py  bookmark.py  browser.py  extension.py  firefox.py  host_and_port.py  http.py  mitm_addon.py  preset.py  process.py  profile.py  proxy.py
mise/tasks/: install-on-arch-linux  package-for-arch-linux
studies/from-project1/scraping/: __init__.py
studies/from-project1/scraping/browser/: __init__.py  browser.py  types.py
studies/from-project1/scraping/proxy/: __init__.py  __main__.py  mitm_addon.py  proxy.py  types.py
studies/from-project2/: .gitignore  README.md  setup.py
studies/from-project2/scripts/: stream-torrent  throwable-firefox
studies/from-project2/throwablefirefox/: __main__.py
studies/from-project2/throwablefirefox/firefox/: __init__.py  bookmark.py  extension.py  profile.py
studies/from-project2/throwablefirefox/ipchecker/: __init__.py
studies/from-project2/throwablefirefox/networknamespace/: __init__.py
studies/from-project2/throwablefirefox/openvpn/: __init__.py
studies/from-project2/throwablefirefox/pia/: __init__.py
studies/from-project2/throwablefirefox/shell/: __init__.py
studies/from-project2/throwablefirefox/tools/: __init__.py  peerflix.py  subdl.py  vlc.py
studies/from-project2/throwablefirefox/waitfor/: __init__.py
