[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "radium226-throwable-firefox"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "selenium",
    "mitmproxy",
    "pydantic>=2",
    "loguru",
    "pyasn1",
    "pyasn1-modules",
    "aiosqlite",
    "click",
    "radium226-vpn-passthrough-client",
]

[project.scripts]
throwable-firefox = "radium226.throwable_firefox.cli.__main__:main"

[tool.uv.build-backend]
module-name = "radium226.throwable_firefox"
source-dir = "src"

[tool.uv.sources]
radium226-vpn-passthrough-client = { path = "../../vpn-passthrough/app/packages/client", editable = true }

[dependency-groups]
dev = [
    "ty",
    "ruff",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty]
environment = { python-version = "3.14" }

[tool.ty.src]
exclude = ["**/mitm_addon.py"]
