[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "radium226-throwable-firefox"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mitmproxy",
    "pydantic>=2",
    "loguru",
    "aiosqlite",
    "click",
    "pyyaml",
    "radium226-vpn-passthrough-client",
]

[project.scripts]
throwable-firefox = "radium226.throwable_firefox.cli.__main__:main"

[tool.uv.build-backend]
module-name = "radium226.throwable_firefox"
source-dir = "src"

[tool.uv.sources]
radium226-vpn-passthrough-client = { git = "https://git.sr.ht/~radium226/vpn-passthrough", subdirectory = "app/packages/client" }

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "types-pyyaml",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty]
environment = { python-version = "3.14" }

[tool.ty.src]
exclude = ["**/mitm_addon.py"]
